tests/compile_fail/not-impl.rs
use default_boxed::DefaultBoxed;

struct Bar;

#[derive(DefaultBoxed)]
struct Foo {
    a: Bar,
}

fn main() {}
